<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="350dp"
    android:layout_width="wrap_content"
    android:background="@drawable/bg_rounded_rectangle">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/titleText"
        style="@style/robotoLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/event_dialog_title"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/locationText"
        style="@style/robotoLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/event_dialog_location"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/personText"
        style="@style/robotoLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/event_dialog_person"
        android:inputType="text"
        android:singleLine="true" />

    <RadioGroup
        android:id="@+id/colorRadioGroup"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/yellowRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_rectangle_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="#f1c40f"/>
        <RadioButton
            android:id="@+id/greenRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_rectangle_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="#2ecc71"/>
        <RadioButton
            android:id="@+id/redRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_rectangle_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="#e74c3c"/>
        <RadioButton
            android:id="@+id/blueRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_rectangle_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="#3498db"/>
    </RadioGroup>

    <TimePicker
        android:id="@+id/startTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:timePickerMode="spinner" />

    <RadioGroup
        android:id="@+id/durationRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/oneLessonRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="45 min" />

        <RadioButton
            android:id="@+id/twoLessonsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="90 min" />
    </RadioGroup>

    <android.support.design.widget.TabLayout
        android:id="@+id/dateTabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TabItem
            android:id="@+id/startTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_dialog_start" />

        <android.support.design.widget.TabItem
            android:id="@+id/endTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_dialog_end" />

    </android.support.design.widget.TabLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:text="@string/event_dialog_repeat" />

        <Spinner
            android:id="@+id/repeatSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/black"
        app:fabSize="mini"
        app:rippleColor="@android:color/darker_gray"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:visibility="gone">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/deleteEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:tint="@android:color/white"
            app:backgroundTint="@android:color/holo_red_dark"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/updateEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:tint="@android:color/white"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_refresh_black_24dp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>